# varigrid-gateway

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  gateway_config.example.yaml  pyproject.toml  requirements.txt
tests/: test_collectors.py  test_config.py  test_simulator.py
varigrid_gateway/: __main__.py  buffer.py  cli.py  client.py  config.py  log.py  runner.py
varigrid_gateway/collectors/: __init__.py  bacnet.py  base.py  modbus_rtu.py  modbus_tcp.py  mqtt.py  opcua.py  simulator.py  snmp.py
