[project]
name = "varigrid-gateway"
version = "0.1.0"
description = "Edge agent that polls data-centre sensors and pushes readings to Varigrid."
authors = [{ name = "Varigrid", email = "support@varigrid.in" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "pymodbus>=3.6,<4.0",
]

[project.scripts]
varigrid-gateway = "varigrid_gateway.cli:main"

[project.urls]
Homepage   = "https://varigrid.in"
Repository = "https://github.com/varigrid/gateway"
Issues     = "https://github.com/varigrid/gateway/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["varigrid_gateway*"]
