[project]
name = "varigrid-gateway"
version = "0.1.0"
description = "Edge agent that polls data-centre sensors and pushes readings to Varigrid."
authors = [{ name = "Varigrid", email = "support@varigrid.in" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    # Modbus TCP + RTU
    "pymodbus>=3.6,<4.0",
    "pyserial>=3.5,<4.0",
    # SNMP v2c / v3
    "pysnmp>=7.1,<8.0",
    # BACnet/IP
    "BAC0>=2024.6,<2026.0",
    # OPC UA
    "asyncua>=1.1,<2.0",
    # MQTT subscribe
    "paho-mqtt>=2.0,<3.0",
]

[project.scripts]
varigrid-gateway = "varigrid_gateway.cli:main"

[project.urls]
Homepage   = "https://varigrid.in"
Repository = "https://github.com/varigrid/gateway"
Issues     = "https://github.com/varigrid/gateway/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["varigrid_gateway*"]
